--- a/app/src/main/res/layout/fragment_timeline_list.xml
+++ b/app/src/main/res/layout/fragment_timeline_list.xml
@@ -2,7 +2,8 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    android:id="@+id/timeline_list"
+    android:layout_marginTop="?attr/actionBarSize"
     android:name="com.example.b07.TimelineFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
