--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -149,11 +149,20 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
+        android:id="@+id/test_want"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/test"
         android:layout_marginBottom="40dp"
-        android:text="test"
+        android:text="want"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/timeline" />
+
+    <Button
+        android:id="@+id/test_take"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:text="take"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/timeline" />
 
