--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,5 +43,13 @@
             android:layout_alignParentEnd="true"
             android:text="take"
             android:visibility="gone" />
+
+        <Spinner
+            android:id="@+id/coursesSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:minHeight="48dp"
+            android:visibility="gone" />
     </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
