--- a/app/src/main/res/layout/fragment_create_course.xml
+++ b/app/src/main/res/layout/fragment_create_course.xml
@@ -63,13 +63,13 @@
         android:layout_width="278dp"
         android:layout_height="34dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/ubuntu_bold"
         android:text="Select Prerequistes:"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/select_course_session" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
 
     <Button
         android:id="@+id/button"
@@ -111,20 +111,54 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <Spinner
-        android:id="@+id/select_course_session"
-        android:layout_width="175dp"
-        android:layout_height="91dp"
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="73dp"
+        android:layout_height="36dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="15dp"
-        android:contentDescription="@string/placeholder_text"
+        android:layout_marginTop="30dp"
+        android:text="Fall"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
+        android:onClick="onCheckboxClicked"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <CheckBox
+        android:id="@+id/checkBox2"
+        android:layout_width="78dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="30dp"
+        android:text="Winter"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toEndOf="@+id/checkBox"
+        android:onClick="onCheckboxClicked"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <CheckBox
+        android:id="@+id/checkBox3"
+        android:layout_width="89dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="30dp"
+        android:text="Summer"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toEndOf="@+id/checkBox2"
+        android:onClick="onCheckboxClicked"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/session_button"
+        android:layout_width="73dp"
+        android:layout_height="35dp"
+        android:text="Order"
+        tools:layout_editor_absoluteX="303dp"
+        tools:layout_editor_absoluteY="318dp" />
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="292dp"
-        android:layout_height="151dp"
+        android:layout_width="318dp"
+        android:layout_height="182dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:contentDescription="@string/placeholder_text"
