--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -91,7 +91,7 @@
                     android:textSize="15dp" />
 
                 <Button
-                    android:id="@+id/view_wishlist"
+                    android:id="@+id/switch_courses"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_marginTop="5dp"
@@ -106,6 +106,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/courses_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -119,7 +120,7 @@
             android:textSize="30sp" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/taken"
+            android:id="@+id/student_courses"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/fragment_course"
